lesson03/css/small.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Nunito:ital,wght@1,300&display=swap');

h1 h2 {
    font-family: 'Merriweather';
}
p{
    font-family: 'Nunito';
}

* {
    margin: 0;
    padding: 0;
}

main {
    margin: 1rem;
}

/* ReUsed */

#Content {
    margin: 0 auto;
    padding: 1%;
    max-width: 600px;
}

header {
    background-color: rgb(72, 135, 207);
    text-align: center;
    padding: .1rem;
    border-radius: 10px;
    box-shadow: -1px 1px 33px 1px rgba(0,0,0,0.75);
    color: white;
}
nav{
    display: inline-block;
    padding: 1rem;
}
nav ul {
    display: flex;
    gap: 1rem;
    list-style: none;
}
nav ul li a{
    text-decoration: none;
}

#Footer {
    margin-top: 3%;
    background-color: rgb(72, 135, 207);
    text-align: center;
    padding: 8px;
    border-radius: 5px;
    box-shadow: -1px 1px 33px 1px rgba(0,0,0,0.75);
    font-weight: 600;
    color: white;
}

main div {
    margin: .5rem;
    padding: 1rem;
    border-radius: 1rem;
    background-color: rgba(175, 175, 175, 0.493);
    box-shadow: -1px 1px 33px 1px rgba(0,0,0,0.15);
}
main div p, main div img, main div ul li {
    margin: .5rem;
}
main div ul li {
    list-style: none;
}

/* Color Scheme */
#siteHeader p{
    font-family: 'Merriweather';
    font-size: 30px;
    font-weight: 500;
    padding: .25rem;
    background-color: mediumseagreen;
    color: midnightblue;
    border-radius: .5rem;
    display: inline-block;
    
}
#sitePrimaryNav p{
    font-family: 'Nunito';
    font-size: 20px;
    font-weight: 500;
    padding: .25rem;
    background-color: rgb(204, 174, 135);
    color: rgb(0, 255, 157);
    border-radius: .5rem;
    display: inline-block;
}
#siteFooter p{
    font-family: 'Nunito';
    font-size: 20px;
    font-weight: 500;
    padding: .25rem;
    background-color: mediumseagreen;
    color: rgb(0, 255, 157);
    border-radius: .5rem;
    display: inline-block;
}
#siteHeadings p{
    font-family: 'Merriweather';
    font-size: 30px;
    font-weight: 500;
    padding: .25rem;
    color: midnightblue;
}
#siteParagraphs p{
    font-family: 'Nunito';
    font-size: 20px;
    font-weight: 500;
    padding: .25rem;
    color: rgb(0, 126, 78);
    border-radius: .5rem;
    display: inline-block;
}

/* Typography */

#headerText p{
    font-family: 'Merriweather';
    font-size: 30px;
    font-weight: 500;
}
#primaryNavText p{
    font-family: 'Nunito';
    font-size: 20px;
    font-weight: 500;
}
#footerText p{
    font-family: 'Nunito';
    font-size: 20px;
    font-weight: 500;
}
#headingsText p{
    font-family: 'Merriweather';
    font-size: 25px;
    font-weight: 500;
}
#paragraphsText p{
    font-family: 'Nunito';
    font-size: 20px;
    font-weight: 500;
}

